# OOStatLib

./: .gitignore  CMakeLists.txt  OOStatLib.dox  OOStatLib_8dox.html  README.md  _formulas.tex  _formulas_dark.tex  annotated.html  classbool.html  classdouble.html  classes.html  classsl_1_1algorhithm-members.html  classsl_1_1algorhithm.html  classsl_1_1algorhithm__coll__graph.map  classsl_1_1algorhithm__coll__graph.md5  classsl_1_1algorhithm__inherit__graph.map  classsl_1_1algorhithm__inherit__graph.md5  classsl_1_1data__logic-members.html  classsl_1_1data__logic.html  classsl_1_1data__logic__coll__graph.map  classsl_1_1data__logic__coll__graph.md5  classsl_1_1data__logic__inherit__graph.map  classsl_1_1data__logic__inherit__graph.md5  classsl_1_1mean-members.html  classsl_1_1mean.html  classsl_1_1mean__coll__graph.map  classsl_1_1mean__coll__graph.md5  classsl_1_1mean__inherit__graph.map  classsl_1_1mean__inherit__graph.md5  classsl_1_1mean__significance__test-members.html  classsl_1_1mean__significance__test.html  classsl_1_1mean__significance__test__coll__graph.map  classsl_1_1mean__significance__test__coll__graph.md5  classsl_1_1mean__significance__test__inherit__graph.map  classsl_1_1mean__significance__test__inherit__graph.md5  classsl_1_1mean__significance__test_a6126c0e92642cb40c4ead94647aa95fe_cgraph.map  classsl_1_1mean__significance__test_a6126c0e92642cb40c4ead94647aa95fe_cgraph.md5  classsl_1_1mean_ab5f31a9b8258af44da78fc51c479b801_icgraph.map  classsl_1_1mean_ab5f31a9b8258af44da78fc51c479b801_icgraph.md5  classsl_1_1pair__observations__test-members.html  (+159 more)
(+62 files in other folders)
